// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component render should render correctly - isDisabled 1`] = `
<div>
  <span
    class="pf-v6-c-form-control pf-m-disabled pf-m-icon ins-c-conditional-filter"
  >
    <input
      aria-invalid="false"
      aria-label="text input"
      data-ouia-component-id="ConditionalFilter"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      disabled=""
      id="test-id"
      type="text"
      value=""
      widget-type="InsightsInput"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon"
      >
        <span
          class="pf-v6-c-icon pf-m-md ins-c-search-icon"
        >
          <span
            class="pf-v6-c-icon__content"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Text component render should render correctly 1`] = `
<div>
  <span
    class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
  >
    <input
      aria-invalid="false"
      aria-label="text input"
      data-ouia-component-id="ConditionalFilter"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="test-id"
      type="text"
      value=""
      widget-type="InsightsInput"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon"
      >
        <span
          class="pf-v6-c-icon pf-m-md ins-c-search-icon"
        >
          <span
            class="pf-v6-c-icon__content"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Text component render should render placeholder 1`] = `
<div>
  <span
    class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
  >
    <input
      aria-invalid="false"
      aria-label="text input"
      data-ouia-component-id="ConditionalFilter"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="test-id"
      placeholder="some-placeholder"
      type="text"
      value=""
      widget-type="InsightsInput"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon"
      >
        <span
          class="pf-v6-c-icon pf-m-md ins-c-search-icon"
        >
          <span
            class="pf-v6-c-icon__content"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`Text component render should render value 1`] = `
<div>
  <span
    class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
  >
    <input
      aria-invalid="false"
      aria-label="text input"
      data-ouia-component-id="ConditionalFilter"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      id="test-id"
      type="text"
      value="some-value"
      widget-type="InsightsInput"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon"
      >
        <span
          class="pf-v6-c-icon pf-m-md ins-c-search-icon"
        >
          <span
            class="pf-v6-c-icon__content"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
